<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/loginpagebackground"
    tools:context=".SignUpActivity">

    <EditText
        android:layout_marginTop="200dp"
        android:background="@drawable/backgorundshap"
        android:textColor="#000"
        android:textStyle="italic"
        android:textColorHint="@android:color/white"
        android:id="@+id/edt_up_username"
        android:padding="10dp"
        android:layout_width="300dp"
        android:hint="@string/Input_Username"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_marginTop="25sp"
        android:layout_below="@+id/edt_up_username"
        android:background="@drawable/backgorundshap"
        android:textColor="#000"
        android:textStyle="italic"
        android:textColorHint="@android:color/white"
        android:id="@+id/edt_up_useremail"
        android:padding="10dp"
        android:layout_width="300dp"
        android:hint="@string/Input_Useremail"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/edt_up_useremail"
        android:background="@drawable/backgorundshap"
        android:textColor="#000"
        android:textStyle="italic"
        android:textColorHint="@android:color/white"
        android:id="@+id/edt_up_userpassword"
        android:padding="10dp"
        android:layout_width="300dp"
        android:hint="@string/Input_Userpassword"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20sp"
        android:padding="10dp"
        android:background="@drawable/buttonbackgroundshap"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:text="@string/btn_SignUp"
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_up_userpassword"
        />
    <TextView
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_below="@+id/btn_signup"
        android:id="@+id/txt_signin"
        android:text="@string/Allready_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>